--- a/inst/packagePages/assets/pkgdown.css
+++ b/inst/packagePages/assets/pkgdown.css
@@ -114,7 +114,7 @@ code a, pre a {
 /* For shrinking navbar ------------------ */
 
 .navbar.shrink {
-    background: #f7ffbc;
+    background: #e4f4e4;
     min-height: 0;
     padding: 0 0;
     background-size: 32px auto;
