--- a/inst/packagePages/templates/head.html
+++ b/inst/packagePages/templates/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="https://centerforassessment.github.io/public/favicon.png" sizes="16x16">
 
-<title>{{{pagetitle}}} • {{#site}}{{title}}{{/site}}</title>
+<title>{{#site}}{{title}}{{/site}} • {{{pagetitle}}}</title>
 
 <!-- jquery -->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
