Update of navbar color

--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -3954,7 +3954,7 @@ tbody.collapse.in {
     .navbar-right ~ .navbar-right {
       margin-right: 0; } }
 .navbar-default {
-  background-color: #fdefba;
+  background-color: #c5c54e;
   border-color: transparent; }
   .navbar-default .navbar-brand {
     color: #444; }
