--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -3194,7 +3194,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 15px;
   text-align: left;
-  background-color: #fdf5d5;
+  background-color: rgba(205, 205, 78, 0.92);
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 3px;
@@ -3255,7 +3255,7 @@ tbody.collapse.in {
   padding: 3px 20px;
   font-size: 13px;
   line-height: 1.846;
-  color: #bbb;
+  color: #111;
   white-space: nowrap; }
 
 .dropdown-backdrop {
@@ -3584,7 +3584,7 @@ tbody.collapse.in {
         cursor: not-allowed; }
   .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
     background-color: #eeeeee;
-    border-color: #778; }
+    border-color: #f5f5f5; }
   .nav .nav-divider {
     height: 1px;
     margin: 12.5px 0;
@@ -3967,6 +3967,7 @@ tbody.collapse.in {
     color: #444; }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
       color: #222;
+      border: #f5f5f5;
       background-color: transparent; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #212121;
@@ -3984,10 +3985,12 @@ tbody.collapse.in {
   .navbar-default .navbar-form {
     border-color: transparent; }
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    background-color: #fdf5d5;
-    color: #212121;
-    border-left: 1px solid #bdd;
-    border-right: 1px solid #bdd; }
+    background-color: #c5c54e;
+    color: #f5f5f5;
+    border-left: 1px solid #d5d54e;
+    border-right: 1px solid #d5d54e;
+    border-top: 1px solid #d5d54e;
+    border-radius: 5px}
   @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #444; }
@@ -6411,9 +6414,11 @@ input[type="checkbox"],
 
 .dropdown-menu {
   margin-top: 0;
-  border: none;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  border-right: 1px solid #d5d54e;
+  border-left: 1px solid #d5d54e;
+  border-bottom: 1px solid #d5d54e; }
 
 .alert {
   border: none;
