--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -3986,11 +3986,11 @@ tbody.collapse.in {
     border-color: transparent; }
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     background-color: #c5c54e;
-    color: #f5f5f5;
+    color: #111;
     border-left: 1px solid #d5d54e;
     border-right: 1px solid #d5d54e;
     border-top: 1px solid #d5d54e;
-    border-radius: 5px}
+    border-radius: 5px 5px 0px 0px; }
   @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #444; }
