--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -3194,7 +3194,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 15px;
   text-align: left;
-  background-color: rgba(205, 205, 78, 0.92);
+  background-color: rgba(231, 231, 126, 0.92);
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 3px;
@@ -3954,7 +3954,7 @@ tbody.collapse.in {
     .navbar-right ~ .navbar-right {
       margin-right: 0; } }
 .navbar-default {
-  background-color: #c5c54e;
+  background-color: #dede7e;
   border-color: transparent; }
   .navbar-default .navbar-brand {
     color: #444; }
@@ -3967,7 +3967,6 @@ tbody.collapse.in {
     color: #444; }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
       color: #222;
-      border: #f5f5f5;
       background-color: transparent; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #212121;
@@ -3985,12 +3984,13 @@ tbody.collapse.in {
   .navbar-default .navbar-form {
     border-color: transparent; }
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    background-color: #c5c54e;
+    background-color: #e7e77e;
     color: #111;
-    border-left: 1px solid #d5d54e;
-    border-right: 1px solid #d5d54e;
-    border-top: 1px solid #d5d54e;
-    border-radius: 5px 5px 0px 0px; }
+    border-left: 1px solid #c7c77e;
+    border-right: 1px solid #c7c77e;
+    border-top: 1px solid #c7c77e;
+    border-radius: 5px 5px 0px 0px;
+    padding-bottom: 6px; }
   @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #444; }
@@ -6416,9 +6416,9 @@ input[type="checkbox"],
   margin-top: 0;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  border-right: 1px solid #d5d54e;
-  border-left: 1px solid #d5d54e;
-  border-bottom: 1px solid #d5d54e; }
+  border-right: 1px solid #c7c77e;
+  border-left: 1px solid #c7c77e;
+  border-bottom: 1px solid #c7c77e; }
 
 .alert {
   border: none;
