--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -3571,7 +3571,8 @@ tbody.collapse.in {
     .nav > li > a {
       position: relative;
       display: block;
-      padding: 10px 15px; }
+      padding: 10px 15px;
+      border-color: #a7a77e}
       .nav > li > a:hover, .nav > li > a:focus {
         text-decoration: none;
         background-color: #eeeeee; }
@@ -6418,11 +6419,10 @@ input[type="checkbox"],
 
 .dropdown-menu {
   margin-top: 0;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
   border-right: 1px solid #c7c77e;
   border-left: 1px solid #c7c77e;
-  border-bottom: 1px solid #c7c77e; }
+  border-bottom: 1px solid #c7c77e;
+  border-top: transparent; }
 
 .alert {
   border: none;
