--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -5836,7 +5836,7 @@ button.close {
     background-repeat: no-repeat;
     background-position: 15px center; }
   .navbar-label {
-    font-family: "Josefin Sans", monospace;
+    font-family: "Josefin Sans", sans-serif;
     font-weight: 400;
     font-size: 38px;
     padding: 0 0 0 0px;
