Fixing link to center logo

--- a/inst/packagePages/templates/head.html
+++ b/inst/packagePages/templates/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="https://centerforassessment.github.io/public/favicon.png" sizes="16x16">
+<link rel="icon" type="image/png" href="https://centerforassessment.github.io/assets/favicon.png" sizes="16x16">
 
 <title>{{#site}}{{title}}{{/site}} • {{{pagetitle}}}</title>
 
