--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -1544,7 +1544,8 @@ pre {
 .row {
   margin-left: -15px;
   margin-right: -15px;
-  margin-top: 20px; }
+  margin-top: 20px;
+  background-color: #fffff8; }
   .row:before, .row:after {
     content: " ";
     display: table; }
