--- a/inst/packagePages/assets/tufte.css
+++ b/inst/packagePages/assets/tufte.css
@@ -1,36 +1,3 @@
-/* Import ET Book styles
-   adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
-
-@charset "UTF-8";
-
-@font-face {
-  font-family: "et-book";
-  src: url("et-book/roman-line-figures.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal
-}
-
-@font-face {
-  font-family: "et-book";
-  src: url("et-book/display-italic-old-style-figures.ttf") format("truetype");
-  font-weight: normal;
-  font-style: italic
-}
-
-@font-face {
-  font-family: "et-book";
-  src: url("et-book/bold-line-figures.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal
-}
-
-@font-face {
-  font-family: "et-book-roman-old-style";
-  src: url("et-book/roman-old-style-figures.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
 /* Tufte CSS styles */
 html { font-size: 15px; }
 
@@ -38,7 +5,7 @@ body { width: 87.5%;
        margin-left: auto;
        margin-right: auto;
        padding-left: 12.5%;
-       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+       font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
        background-color: #fffff8;
        color: #111;
        max-width: 1400px;
@@ -79,8 +46,6 @@ h4.author, h4.date {
     margin: 1rem auto;
     line-height: 1;
 }
-
-.numeral { font-family: et-book-roman-old-style; }
 
 .danger { color: red; }
 
@@ -134,26 +99,6 @@ div.figure {
          margin: 0 0 3em 0;
          }
 
-/* Links: replicate underline that clears descenders */
-a:link, a:visited { color: inherit; }
-
-a:link { text-decoration: none;
-         background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
-         background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#333, #333);
-         -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-         -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-         background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-         background-repeat: no-repeat, no-repeat, repeat-x;
-         text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
-         background-position: 0% 93%, 100% 93%, 0% 93%; }
-
-@media screen and (-webkit-min-device-pixel-ratio: 0) { a:link { background-position-y: 87%, 87%, 87%; } }
-
-a:link::selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-                    background: #b4d5fe; }
-
-a:link::-moz-selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-                         background: #b4d5fe; }
 
 /* Sidenotes, margin notes, figures, captions */
 img {max-width: 100%;}
@@ -171,9 +116,8 @@ img {max-width: 100%;}
                          vertical-align: baseline;
                          position: relative; }
 
-.sidenote-number { font-family: et-book-roman-old-style;
-                                           position: relative;
-                                           vertical-align: baseline; }
+.sidenote-number { position: relative;
+                   vertical-align: baseline; }
 
 .sidenote-number { font-size: 1rem;
                          top: -0.5rem;
