--- a/inst/packagePages/assets/tufte.css
+++ b/inst/packagePages/assets/tufte.css
@@ -132,7 +132,8 @@ li p, li pre {margin-top: auto; }
 
 div.fullwidth, table.fullwidth { max-width: 90%; }
 
-#TOC, h1.title { max-width: 90%; }
+/* #TOC, h1.title { max-width: 90%; } */
+h1.title { max-width: 90%; }
 #TOC ol, #TOC ul { width: auto; }
 
 div.fullwidth p.caption {
