Link PDF file in HTML report

--- a/inst/packagePages/templates/content-tufte.html
+++ b/inst/packagePages/templates/content-tufte.html
@@ -32,7 +32,6 @@ $endif$
 <!--   navbar from pkgdown/packagePages   -->
 
 
-
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
@@ -177,7 +176,9 @@ $endif$
 <div class="row-fluid">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="$idprefix$TOC" class="tocify">
+<ul><a class="btn btn-primary" href="{{{pdffile}}}" style="background-color: red;"> <i class="fa fa-download" aria-hidden="true"></i><span>   Download</span></a></ul>
 </div>
+
 </div>
 
 <div class="toc-content col-xs-12 col-sm-8 col-md-9">
