Minor mods to css

--- a/inst/packagePages/templates/content-tufte.html
+++ b/inst/packagePages/templates/content-tufte.html
@@ -102,6 +102,7 @@ $endif$
 
 #$idprefix$TOC {
   margin: 25px 0px 20px -40px;
+  max-width: 260px;
 }
 @media (max-width: 768px) {
 #$idprefix$TOC {
