Updating to Adams branch and refining CSS for download button

--- a/inst/packagePages/templates/content-tufte.html
+++ b/inst/packagePages/templates/content-tufte.html
@@ -177,9 +177,11 @@ $endif$
 <div class="row-fluid">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="$idprefix$TOC" class="tocify">
-<ul><a class="btn btn-primary" href="{{{pdffile}}}" style="background-color: red;"> <i class="fa fa-download" aria-hidden="true"></i><span>   Download</span></a></ul>
+<ul class="tocify-header list-group" style="background-color: #0000FF">
+    <a href="{{{pdffile}}}" >
+    <i class="fa fa-download" aria-hidden="true" style="color: #FFFFFF"></i><span style="color: #FFFFFF">View PDF</span></a>
+</ul>
 </div>
-
 </div>
 
 <div class="toc-content col-xs-12 col-sm-8 col-md-9">
