Updating to Adams branch and refining CSS for download button

--- a/inst/packagePages/templates/content-tufte.html
+++ b/inst/packagePages/templates/content-tufte.html
@@ -179,7 +179,7 @@ $endif$
 <div id="$idprefix$TOC" class="tocify">
 <ul class="tocify-header list-group" style="background-color: #0000FF">
     <a href="{{{pdffile}}}" >
-    <i class="fa fa-download" aria-hidden="true" style="color: #FFFFFF"></i><span style="color: #FFFFFF">View PDF</span></a>
+    <i class="fa fa-file-pdf-lg" aria-hidden="true" style="color: #FFFFFF"></i><span style="color: #FFFFFF">View PDF</span></a>
 </ul>
 </div>
 </div>
