Refinement to pdf link

--- a/inst/packagePages/templates/content-tufte.html
+++ b/inst/packagePages/templates/content-tufte.html
@@ -177,9 +177,8 @@ $endif$
 <div class="row-fluid">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="$idprefix$TOC" class="tocify">
-<ul class="tocify-header list-group" style="background-color: #0000FF">
-    <a href="{{{pdffile}}}" >
-    <i class="fa fa-file-pdf-lg" aria-hidden="true" style="color: #FFFFFF"></i><span style="color: #FFFFFF">View PDF</span></a>
+<ul class="tocify-header list-group" style="background-color: #efefef; border-bottom: 1px solid #444">
+    <li class="menuitem" style="cursor:pointer;padding-top: 5px;padding-bottom: 5px"><a href="{{{pdffile}}}" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true" style="font-size:28px;color:red"></i><span style="font-size:24px;color:red;padding-left:7px">View PDF</span></a></li>
 </ul>
 </div>
 </div>
