--- a/inst/packagePages/assets/tufte.css
+++ b/inst/packagePages/assets/tufte.css
@@ -198,3 +198,14 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
                             pre { width: 90%;
                                        padding: 0; }
                             }
+
+
+/*   References class from SGPreports/Literasee package template   */
+
+.references p {
+  text-align:justify;
+  min-height: 22px;
+  padding-bottom: 15px;
+  padding-left: 35px ;
+  text-indent: -35px ;
+}
