--- a/inst/packagePages/assets/tufte.css
+++ b/inst/packagePages/assets/tufte.css
@@ -17,8 +17,7 @@ h1.title { font-weight: 400;
      font-size: 3.2rem;
      line-height: 1; }
 
-h1 { font-style: italic;
-     font-weight: 400;
+h1 { font-weight: 400;
      margin-top: 2.1rem;
      margin-bottom: 0;
      font-size: 2.2rem;
