--- a/inst/packagePages/assets/packagePages.css
+++ b/inst/packagePages/assets/packagePages.css
@@ -1125,6 +1125,9 @@ img {
 .img-circle {
   border-radius: 50%; }
 
+.img-author {
+  clip-path: circle(10px at center); }
+
 hr {
   margin-top: 27px;
   margin-bottom: 27px;
