--- a/inst/packagePages/templates/head.html
+++ b/inst/packagePages/templates/head.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="website"/>
 <meta property="og:site_name" content="{{#site}}{{title}}{{/site}} • {{{pagetitle}}}">
 <meta property="og:url" content="https://centerforassessment.github.io/{{#site}}{{title}}{{/site}}"/>
-<meta property="og:image" content="https://centerforassessment.github.io/{{repo_name}}/img/favicon.png"/>
+<meta property="og:image" content="https://centerforassessment.github.io/{{repo_name}}/img/REPO_CARD_image.png"/>
 <meta name="og:image:alt" content="Landing Page Image for Repo">
 
 <meta name="twitter:title" content="{{#site}}{{title}}{{/site}} • {{{pagetitle}}}"/>
@@ -19,7 +19,7 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:site" content="@NCIEA1"/>
 <meta name="twitter:creator" content="@dbetebenner"/>
-<meta name="twitter:image" content="https://centerforassessment.github.io/{{repo_name}}/img/favicon.png"/>
+<meta name="twitter:image" content="https://centerforassessment.github.io/{{repo_name}}/img/REPO_CARD_image.png"/>
 <meta name="twitter:image:alt" content="Landing Page Image for Repo">
 
 <title>{{#site}}{{title}}{{/site}} • {{{pagetitle}}}</title>
